[tool.poetry]
name = "qtoml"
version = "0.2.3"
description = "New TOML encoder/decoder"
authors = ["alethiophile <tomdicksonhunt@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/alethiophile/qtoml"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
click = {version = "^7.0",optional = true}

[tool.poetry.dev-dependencies]
python-dateutil = "^2.7"
pytest = "^4.1"
hypothesis = "^4.4"

[tool.poetry.scripts]
qtoml_testencode = "qtoml.__main__:encode"
qtoml_testdecode = "qtoml.__main__:decode"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
