[tool.poetry]
name = "qtoml"
version = "0.3.0"
description = "New TOML encoder/decoder"
authors = ["alethiophile <tomdicksonhunt@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/alethiophile/qtoml"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
click = {version = ">=7.0,<9.0",optional = true}
attrs = ">=19.3.0,<22.0"

[tool.poetry.dev-dependencies]
python-dateutil = "^2.7"
pytz = "^2018.9"
click = ">=7.0,<9.0"
hypothesis = "^5.1.4"
pytest = "^5.3.2"
mypy = "^0.761"

[tool.poetry.scripts]
qtoml_testencode = "qtoml.__main__:encode"
qtoml_testdecode = "qtoml.__main__:decode"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
